# charityraffle

./: .gitignore  README.md  pyproject.toml  requirements.txt
files/6. ukrainian_children/: golden.txt  snapshot.txt
files/7. ceasm/: golden.txt  snapshot.txt
files/airdrop/: sets.csv  sets.txt
files/sets/: sets.csv  sets.txt
files/ukrainian_children/: golden.txt  snapshot.txt
src/: base.py  blockfrostio.py  constants.py  finder.py  goldens.py  maestro.py  main.py  raffles.py  snapshots.py  tmp.py  toolkit.py  utils.py
src/raffles/kumwe_hub/: goldens.py
src/raffles/kumwe_hub/files/: goldens.txt  snapshot.txt
src/raffles/raffle_01/: snapshot.py
src/raffles/raffle_02/: goldens.py
src/raffles/raffle_03/: goldens.py  snapshot.py
src/raffles/raffle_04/: goldens.py  snapshot.py
src/raffles/raffle_05/: goldens.py  snapshot.py
src/raffles/raffle_05/files/: goldens.txt  snapshot.txt
src/raffles/ripple_africa/: goldens.py  metadata.py  snapshot.py
src/raffles/ripple_africa/files/: snapshot.txt
src/raffles/ripple_africa/files/metadata/: GoldenEntryTicketAChristmasCarol0446.json  GoldenEntryTicketATaleOfTwoCities2326.json  GoldenEntryTicketAntonyAndCleopatra1457.json  GoldenEntryTicketCryHavoc0045.json  GoldenEntryTicketCryHavoc0142.json  (+2495 more)
src/raffles/syrian_earthquake/: goldens.py  snapshot.py
src/raffles/syrian_earthquake/files/: goldens.txt  snapshot.txt
src/raffles/ukraine/files/: snapshot.txt
src/raffles/ukraine_refugees/: goldens.py  snapshot.py
src/raffles/ukraine_refugees/files/: snapshot.txt
src/snapshots/: main.py  sets.py
(+2500 files in other folders)
