[tool.poetry]
name = "charityraffle"
version = "0.1.0"
description = ""
authors = ["Fede Calendino <fede@calendino.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
bookio-fetchfox = "^2.3.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
